# test_work

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py  views.py
app/core/: common.py  config.py
app/db/: __init__.py  session.py
app/migrations/: env.py
app/migrations/versions/: d032fded7e1d_initial.py
app/models/: __init__.py  tables.py
app/repository/: chat.py  message.py
app/schemas/: chat.py  message.py
app/services/: chat.py  message.py
app/websocket/: manager.py
